--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
         <button id="noBtn">ENGGAK</button>
       </div>
       <button onclick="prevLayer()">⬅ Back</button>
+<button onclick="nextLayer()">Next ➡</button>
     </div>
-  </div>
 
   <div id="layerAkhir" class="layer">
     <video autoplay muted loop class="bg-video">
