--- a/index.html
+++ b/index.html
@@ -394,19 +394,18 @@
     <button onclick="nextLayer()">Next ➡</button>
   </div>
 
-  <div id="layerQuestion" class="layer">
-    <video autoplay muted loop class="bg-video">
-      <source src="asset/bgquestion.mp4" type="video/mp4">
-    </video>
+    <div id="layerQuestion" class="layer">
     <div class="overlay">
       <h1 class="title glow-text">Kamu pasti baper dan jadi suka sama aing kan?😏</h1>
       <div class="btn-container">
         <button id="yesBtn">IYAA</button>
         <button id="noBtn">ENGGAK</button>
       </div>
+      <button onclick="nextLayer()">Next ➡</button> 
       <button onclick="prevLayer()">⬅ Back</button>
-<button onclick="nextLayer()">Next ➡</button>
     </div>
+  </div>
+
 
   <div id="layerAkhir" class="layer">
     <video autoplay muted loop class="bg-video">
