--- a/index.html
+++ b/index.html
@@ -395,6 +395,9 @@
   </div>
 
     <div id="layerQuestion" class="layer">
+    <video autoplay muted loop class="bg-video">
+      <source src="asset/bgquestion.mp4" type="video/mp4">
+    </video>
     <div class="overlay">
       <h1 class="title glow-text">Kamu pasti baper dan jadi suka sama aing kan?😏</h1>
       <div class="btn-container">
@@ -409,7 +412,7 @@
 
   <div id="layerAkhir" class="layer">
     <video autoplay muted loop class="bg-video">
-      <source src="asset/akhir.mp4" type="video/mp4">
+      <source src="asset/videobaru.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <h2 class="glow-text">SEKALI LAGI HBD🥳</h2>
@@ -420,11 +423,10 @@
       <img src="asset/gambar2.jpeg" alt="gambar2" onclick="openLightbox(this, 'Locked Away')">
       <img src="asset/gambar3.jpeg" alt="gambar3" onclick="openLightbox(this, '18')">
       <img src="asset/gambar4.jpeg" alt="gambar4" onclick="openLightbox(this, 'Best Friend')">
-      <img src="asset/gambar5.jpeg" alt="gambar5" onclick="openLightbox(this, 'Bird Of Feather')">
    <img src="asset/gambar6.jpeg" alt="gambar6" onclick="openLightbox(this, 'The Scientists')">
    <img src="asset/gambar7.jpeg" alt="gambar7" onclick="openLightbox(this, 'What Makes You Beautiful')">
    <img src="asset/gambar8.jpeg" alt="gambar8" onclick="openLightbox(this, 'Thousand Years')">
-   <img src="asset/gambar9.jpeg" alt="gambar9" onclick="openLightbox(this, 'Gerua')">
+   <img src="asset/gambar5.jpeg" alt="gambar5" onclick="openLightbox(this, 'Gerua')">
    <img src="asset/gambar10.jpeg" alt="gambar10" onclick="openLightbox(this, 'Can I Be Him')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
